[package]
name = "f"
version = "0.1.0"
authors = ["Brian King <brian.king@adhoc.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
ignore="0.4"
clap = "3.0.0-beta.2"
regex = "1"
tempdir = "0.3.7"
